[package]
name = "tokio-cron-scheduler"
version = "0.6.0-beta.3"
authors = ["Michael van Niekerk <mike@agri-io.co.za>"]
edition = "2018"

documentation = "https://docs.rs/tokio_cron_scheduler/"
repository = "https://github.com/mvniekerk/tokio-cron-scheduler"

description = "Schedule tasks on tokio using cron-like annotation. Also schedule tasks at an instant or repeat them at a fixed duration."

license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["cron", "crontab", "scheduler", "job", "tokio"]

categories = ["date-and-time"]

[dependencies]
tokio = { version = "1", features = ["time", "rt", "sync"] }
cron = "0.10.0"
chrono = "0.4"
time = "0.1.44"
uuid = { version = "0.8", features = ["v4"] }
prost = "0.10"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", optional = true }

[dependencies.nats]
version = "0.18.1"
features = ["unstable"]
optional = true

[dependencies.postgres-openssl]
version = "0.5.0"
optional = true

[dependencies.postgres-native-tls]
version = "0.5.0"
optional = true

[dependencies.tokio-postgres]
version = "0.7"
optional = true
features = ["with-uuid-0_8"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = { version = "0.10" }

[features]
signal = ["tokio/signal"]
nats_storage = ["nats"]
postgres = ["tokio-postgres"]
postgres_native_tls = ["postgres", "postgres-native-tls"]
postgres_openssl = ["postgres", "postgres-openssl"]
default = []

[[example]]
name = "simple"
path = "examples/simple_job.rs"
required-features = ["tracing-subscriber"]

[[example]]
name = "nats"
path = "examples/nats_job.rs"
required-features = ["nats_storage", "tracing-subscriber"]

[[example]]
name = "postgres"
path = "examples/postgres_job.rs"
required-features = ["postgres", "tracing-subscriber"]

